# ZED-fluxc

./: Cargo.toml  LICENSE  README.md  helloworld.fx
crates/flux_binary_explorer/: Cargo.toml
crates/flux_binary_explorer/src/: lib.rs
crates/flux_binary_playground/: Cargo.toml
crates/flux_binary_playground/src/: lib.rs
crates/flux_binary_view/: Cargo.toml
crates/flux_binary_view/src/: lib.rs
crates/flux_bit_slice/: Cargo.toml
crates/flux_bit_slice/src/: lib.rs
crates/flux_build/: Cargo.toml
crates/flux_build/src/: lib.rs
crates/flux_build_dashboard/: Cargo.toml
crates/flux_build_dashboard/src/: lib.rs
crates/flux_comptime_viz/: Cargo.toml
crates/flux_comptime_viz/src/: lib.rs
crates/flux_contract_inspector/: Cargo.toml
crates/flux_contract_inspector/src/: lib.rs
crates/flux_data_inspector/: Cargo.toml
crates/flux_data_inspector/src/: lib.rs
crates/flux_debugger/: Cargo.toml
crates/flux_debugger/src/: lib.rs
crates/flux_endianness/: Cargo.toml
crates/flux_endianness/src/: lib.rs
crates/flux_ide/: Cargo.toml
crates/flux_ide/src/: flux_binary_viewer_panel.rs  flux_build_panel.rs  flux_inspector_panel.rs  language_registration.rs  lib.rs  panels.rs
crates/flux_lsp/: Cargo.toml
crates/flux_lsp/src/: lib.rs
crates/flux_memory/: Cargo.toml
crates/flux_memory/src/: lib.rs
crates/flux_native_binary_editor/: Cargo.toml
crates/flux_native_binary_editor/src/: lib.rs
crates/flux_parser/: Cargo.toml
crates/flux_parser/src/: language_config.rs  lib.rs  query_strings.rs
crates/flux_project_analyzer/: Cargo.toml
crates/flux_project_analyzer/src/: lib.rs
crates/flux_struct_visualizer/: Cargo.toml
crates/flux_struct_visualizer/src/: lib.rs
crates/flux_template_viz/: Cargo.toml
crates/flux_template_viz/src/: lib.rs
crates/flux_visualizer/: Cargo.toml
crates/flux_visualizer/src/: lib.rs
crates/tree-sitter-flux/: Cargo.toml  build.rs
crates/tree-sitter-flux/src/: lib.rs
