[package]
name = "flux_parser"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
tree-sitter.workspace = true
tree-sitter-flux = { path = "../tree-sitter-flux" }
serde.workspace = true
serde_json.workspace = true
util.workspace = true
ztracing.workspace = true
language_core.workspace = true